src/snapshots/monkey_language_server__parser__test__fn_expr_happy_3.snap
---
source: src/parser.rs
description: "fn(x, y, z) {}"
expression: stmts
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
                Ok(
                    Identifier {
                        token: Token(Identifier, "y", (0,6)->(0,7)),
                        name: "y",
                    },
                ),
                Ok(
                    Identifier {
                        token: Token(Identifier, "z", (0,9)->(0,10)),
                        name: "z",
                    },
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,12)->(0,13)),
                statements: [],
            },
        ),
    },
]
