src/snapshots/monkey_language_server__parser__test__fn_expr_happy_4.snap
---
source: src/parser.rs
description: "fn(x) { return x; }"
expression: stmts
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,6)->(0,7)),
                statements: [
                    Return {
                        token: Token(Return, "return", (0,8)->(0,14)),
                        value: Some(
                            Identifier {
                                token: Token(Identifier, "x", (0,15)->(0,16)),
                                name: "x",
                            },
                        ),
                    },
                ],
            },
        ),
    },
]
