src/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_10.snap
---
source: src/parser.rs
description: "fn(@) { return x; }"
expression: stmts
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,3)->(0,4)),
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,6)->(0,7)),
                statements: [
                    Return {
                        token: Token(Return, "return", (0,8)->(0,14)),
                        value: Some(
                            Ok(
                                Identifier {
                                    token: Token(Identifier, "x", (0,15)->(0,16)),
                                    name: "x",
                                },
                            ),
                        ),
                    },
                ],
            },
        ),
    },
]
