src/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_9.snap
---
source: src/parser.rs
description: "fn(x+) {}"
expression: stmts
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected '+'."), (0,4)->(0,5)),
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [],
            },
        ),
    },
]
