src/snapshots/monkey_language_server__parser__test__hash_happy_1.snap
---
source: src/parser.rs
description: "{}"
expression: stmts
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Ok(
            [],
        ),
    },
]
